projects/compiler/test/lexer/ints_error_invalid_octal_eof.out
Error at %FILE_NAME%:1:3
Unexpected end of file:
  |  0o
       ^